fix:update app update api
